# easyb

./: .cproject  .project  CMakeLists.txt  README.md
include/: app.h  easy_board.h
src/: main.c  msg_queue.c  msg_queue.h
src/bsp_arm/: app.c
src/bsp_fake/: app.c
ws/: data.json  model.json
